// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel keyframes extract keyframes basic 1`] = `
"import \\"./keyframes.test.emotion.css\\";

const rotate360 = \\"css-rotate360-f35ahc\\";"
`;

exports[`babel keyframes extract keyframes basic 2`] = `"@-webkit-keyframes css-rotate360-f35ahc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-f35ahc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"`;

exports[`babel keyframes extract keyframes with interpolation 1`] = `
"
const rotate360 = /*#__PURE__*/keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\", {
  meta: {
    identifierName: \\"rotate360\\"
  }
});"
`;

exports[`babel keyframes inline keyframes basic 1`] = `
"
const rotate360 = /*#__PURE__*/keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\", {
  meta: {
    identifierName: \\"rotate360\\"
  }
});"
`;

exports[`babel keyframes inline keyframes with interpolation 1`] = `
"
const rotate360 = /*#__PURE__*/keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\", {
  meta: {
    identifierName: \\"rotate360\\"
  }
});"
`;

exports[`babel keyframes inline static change import 1`] = `
"
const rotate360 = /*#__PURE__*/frames(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\", {
  meta: {
    identifierName: \\"rotate360\\"
  }
});
const rotate3601 = keyframes\`
          from {
            transform: rotate(0deg);
          }
          to {
            transform: rotate(360deg);
          }
      \`;"
`;

exports[`babel keyframes inline static change import 2`] = `
"
import { keyframes as frames } from 'emotion';
const rotate360 = /*#__PURE__*/frames('from{transform:rotate(0deg);}to{transform:rotate(360deg);}', {
  meta: {
    identifierName: 'rotate360'
  }
});
const rotate3601 = keyframes\`
          from {
            transform: rotate(0deg);
          }
          to {
            transform: rotate(360deg);
          }
      \`;"
`;
